# projectdevsetup

./: .gitignore  CONTRIBUTING.md  CONTRIBUTION.md  LICENSE  MANIFEST.in  README.md  contributing.md  license  pyproject.toml  readme.md  security.md  setup.cfg  setup.py
projectdevsetup/: __init__.py  __main__.py  detector.py  installer.py  network.py  path_manager.py  permissions.py  vscode.py  wizard.py
projectdevsetup/templates/: __init__.py  hello.c  hello.html  hello.js
projectdevsetup/utils/: os_detect.py  venv_helper.py
src/: __init__.py  __main__.py  detector.py  installer.py  network.py  path_manager.py  permissions.py  vscode.py  wizard.py
src/projectdevsetup/: __init__.py  __main__.py  detector.py  installer.py  network.py  path_manager.py  permissions.py  vscode.py  wizard.py
src/projectdevsetup/templates/: Hello.java  hello.c  hello.cpp  hello.go  hello.html  hello.js  hello.py  hello.rs
src/projectdevsetup/utils/: __init__.py  logger.py  os_detect.py  venv_helper.py
src/templates/: Hello.java  hello.cpp  hello.go  hello.py  hello.rs
src/utils/: logger.py  venv_helper.py
tests/: conftest.py  test_detector.py  test_installer.py  test_main.py  test_network.py  test_os_detect.py  test_permissions.py  test_smoke.py  test_venv_helper.py  test_wizard.py
