[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "projectdevsetup"
version = "1.0.0"
description = "Automatic developer environment setup for beginners"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Rosh Hellwett", email = "your@email.com" }
]
keywords = [
    "developer setup", "beginner", "vscode", "gcc", "jdk",
    "python setup", "coding environment", "zenith"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
]
requires-python = ">=3.8"
dependencies = [
    "colorama>=0.4.6"
]

[project.urls]
Homepage = "https://github.com/zenith-open-source/projectdevsetup"
Organization = "https://zenithopensourceprojects.vercel.app"