[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projectdevsetup"
version = "1.0.0"
description = "Automatic developer environment setup for beginners"
readme = "README.md"
license = "MIT"
authors = [
    { name = "roshhellwett", email = "roshhellwett@icloud.com" }
]
keywords = [
    "developer setup", "beginner", "vscode", "gcc", "jdk",
    "python setup", "coding environment", "zenith"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
]
requires-python = ">=3.8"
dependencies = [
    "colorama>=0.4.6"
]
license-files = ["LICENSE"]

[project.scripts]
projectdevsetup = "projectdevsetup.__main__:main"

[project.urls]
Homepage = "https://github.com/zenith-open-source/projectdevsetup"
Organization = "https://zenithopensourceprojects.vercel.app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["projectdevsetup*"]

[tool.setuptools.package-data]
projectdevsetup = ["templates/*"]
